// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass on fixtures/rules/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 6,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 13,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 21,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 30,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 41,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/__tests__/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/jest.test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/non-test-file.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 6,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 11,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 13,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 18,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 21,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 22,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 27,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 31,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 38,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 42,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 43,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 49,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 50,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on fixtures/samples/jest/spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/test/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/samples/jest/tests/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;
